Use ansible_user instead of ansible_ssh_user
The option was renamed in 2.0

Signed-off-by: Zack Cerza <zack@redhat.com>

--- a/ansible_managed.yml
+++ b/ansible_managed.yml
@@ -5,6 +5,6 @@
   # assuming the nodes we run this on will most likely
   # have an ubuntu user already created.
   vars:
-    ansible_ssh_user: ubuntu
+    ansible_user: ubuntu
   roles:
     - ansible-managed
