--- a/roles/testnode/tasks/user.yml
+++ b/roles/testnode/tasks/user.yml
@@ -21,7 +21,7 @@
     state: present
   # If we're currently running as teuthology_user, we won't be able to modify
   # the account
-  when: teuthology_user != ansible_ssh_user
+  when: teuthology_user != ansible_user
   register: teuthology_user_existence
 
 # If the teuthology_user was just created, delete its password
