Locate templates properly
See https://github.com/ansible/ansible/issues/14161

Signed-off-by: Zack Cerza <zack@redhat.com>

--- a/roles/testnode/tasks/apt/repos.yml
+++ b/roles/testnode/tasks/apt/repos.yml
@@ -15,7 +15,7 @@
 - name: Set apt preferences
   template:
     dest: "/etc/apt/preferences.d/ceph.pref"
-    src: "../../templates/apt/ceph.pref"
+    src: "apt/ceph.pref"
     owner: root
     group: root
     mode: 0644
@@ -24,7 +24,7 @@
 - name: Add sources list
   template:
     dest: /etc/apt/sources.list
-    src: "../../templates/apt/sources.list.{{ ansible_distribution_release | lower }}"
+    src: "apt/sources.list.{{ ansible_distribution_release | lower }}"
     owner: root
     group: root
     mode: 0644
